@@ -145,6 +145,7 @@ INSERT INTO bnlogin (login, account) VALUES
 INSERT INTO command (access, name, description, cmdgroup) VALUES
 (1,		'access', 'Get the commands avalible to the user', 'commands'),
 (34,	'add', 'Set access', 'accounts'),
+(35,	'addalias', NULL, 'commands'),
 (10,	'allseen', NULL, 'info'),
 (1,		'auth', 'Get the authorization required to use a command', 'commands'),
 (1,		'autopromotion', 'Get the AP info for an account', 'accounts'),
@@ -176,6 +177,7 @@ INSERT INTO command (access, name, description, cmdgroup) VALUES
 (35,	'setrank', NULL, 'clan'),
 (35,	'setrecruiter', NULL, 'accounts'),
 (34,	'sweepban', NULL, 'moderation'),
+(35,	'timeban', NULL, 'moderation'),
 (1,		'trigger', 'Current trigger', 'useful'),
 (1,		'trivia', NULL, 'trivia'),
 (34,	'unban', NULL, 'moderation'),
